# YZM318-Final

./: .gitignore  README.md
artifacts/datasets/: customer_churn_demo.csv
artifacts/workflows/: WA_Fn-UseC_-Telco-Customer-Churn-workflow.ows  self-test-extended.ows
orange3-nl-workflow/: .gitignore  README.md  pyproject.toml
orange3-nl-workflow/orangecontrib/nlworkflow/: __init__.py  cli.py
orange3-nl-workflow/orangecontrib/nlworkflow/core/: __init__.py  canvas.py  compiler.py  dataset_resolver.py  env.py  exporter.py  models.py  planner.py  postprocess.py  qt.py  recipes.py  registry.py  settings.py  validation.py
orange3-nl-workflow/orangecontrib/nlworkflow/widgets/: __init__.py  ownlworkflow.py
orange3-nl-workflow/tests/: test_churn_workflow.py
patches/: orange3-canvas-run-qt-exec-compat.patch
